--- a/docs/fe_code/algorithm/basics/01数据结构.md
+++ b/docs/fe_code/algorithm/basics/01数据结构.md
@@ -1,12 +1,3 @@
-![在这里插入图片描述](https://img-blog.csdnimg.cn/51c032a453ca42fca402402f956ee890.jpg?x-oss-process=image/watermark,type_ZHJvaWRzYW5zZmFsbGJhY2s,shadow_50,text_Q1NETiBAWUvoj4w=,size_20,color_FFFFFF,t_70,g_se,x_16#pic_center)
-
-
-
-> 嗨！~ 大家好，我是YK菌 🐷 ，一个微系前端 ✨，爱思考，爱总结，爱记录，更爱分享 🏹，欢迎关注我呀 😘 ~ [微信公众号：`ykyk2012`]
-
-
-
-
 
 # 一、概述——为什么要学数据结构
 
@@ -162,4 +153,501 @@
 - D. 单链表
 
 
-> 欢迎你将答案写在讨论区，一起交流。欢迎关注我的专栏，和**YK菌**做好朋友！
+首先复习一下数据结构
+
+- 数组
+- 栈
+- 队列
+- 链表
+- 树（这里我们着重讲二叉树）
+
+
+## 数组
+
+一般来说，数组都对应着一段连续的内存，但是在JS中不一定。因为JS中的数组可以存放任意类型的数据。
+
+如果存放的都是同一种类型的数据，那就是占用的连续内存；如果定义了不同类型的元素，那就不是连续的内存。JS底层使用哈希映射分配内存空间，是由对象链表来实现的。
+
+### 创建数组
+
+```js
+const arr1 = [1, 2, 3, 4]  
+const arr2 = new Array()
+const arr3 = []
+const arr4 = new Array(7) // 创造指定长度的空数组
+const arr5 = (new Array(7)).fill(1) // 创造指定长度的数组，初始值为1
+```
+### 遍历数组
+
+1. for循环
+```js
+const len = arr.length // 将数组长度缓存，这样就不用每次循环都要查询
+for(let i = 0; i < len; i++){
+  console.log(arr[i], i)
+}
+```
+
+2. forEach
+```js
+arr.forEach((item, index)=>{
+  console.log(item, index)
+})
+```
+
+3. map
+```js
+const newArr = arr.map((item, index)=>{
+  console.log(item, index)
+  return item + 1
+})
+```
+
+## 二维数组
+
+```js
+const arr = [
+  [1,2,3,4,5],
+  [1,2,3,4,5],
+  [1,2,3,4,5],
+  [1,2,3,4,5],
+  [1,2,3,4,5]
+]
+console.log(arr[i][j]) // i表示行，j表示列
+```
+
+初始化的坑
+```js
+const arr =(new Array(7)).fill([])
+```
+
+当给 fill 传递一个入参时，如果这个入参的类型是引用类型，那么 fill 在填充坑位时填充的其实就是入参的引用，也就是说层的数组都是同一个数组，操作一个会导致所有的都会改变
+
+
+所以应该使用for循环来初始化一个二维数组
+
+```js
+const len = arr.length
+for(let i = 0; i < len; i++){
+  arr[i] = []
+}
+```
+
+遍历二维数组中的所有元素当然就要使用二重for循环
+
+```js
+// 缓存外部数组的长度
+const outerLen = arr.length
+for(let i=0;i<outerLen;i++) {
+    // 缓存内部数组的长度
+    const innerLen = arr[i].length
+    for(let j=0;j<innerLen;j++) {
+        // 输出数组的值，输出数组的索引
+        console.log(arr[i][j], i, j)
+    }
+}
+```
+
+## 数组上的一些常用的方法
+
+[Array - JavaScript | MDN (mozilla.org)](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Array)
+
+[【JS】你不得不知道的JavaScript数组相关知识【全面总结】复习专用 - 掘金 (juejin.cn)](https://juejin.cn/post/6984781948698755080)
+
+### 数组中添加元素的方式
+
+1. `unshift` 方法-添加元素到数组的头部
+
+2. `push` 方法-添加元素到数组的尾部
+
+3. `splice` 方法-添加元素到数组的任何位置
+
+### 数组中删除元素的三种方法
+
+1. `shift` 方法-删除数组头部的元素
+
+2. `pop` 方法-删除数组尾部的元素
+
+3. `splice` 方法-删除数组任意位置的元素
+
+
+### `reduce`
+
+
+
+
+## 栈和队列
+
+栈（Stack）——只用 pop 和 push 完成对增删的“数组”，是一种后进先出(LIFO，Last In First Out)的数据结构。
+
+
+队列（Queue）——只用 push 和 shift 完成增删的“数组”，是一种先进先出（FIFO，First In First Out）的数据结构。
+
+## 链表
+
+数组和链表是同一级别的概念，是数据的存储结构的两种形成，顺序存储和链式存储。逻辑上都是顺序的数据结构。
+
+[707. 设计链表 - 力扣（LeetCode） (leetcode-cn.com)](https://leetcode-cn.com/problems/design-linked-list/)
+
+链表是由一个个结点组合而成的，结点存储**值**与**下一个结点的引用**，在js中是用对象来存储的。
+
+
+```js
+{
+    // 数据域
+    val: 1,
+    // 指针域，指向下一个结点
+    next: {
+        val:2,
+        next: ...
+    }
+}  
+```
+
+
+- [【LeetCode】设计链表（中等）- JavaScript设计单链表 - 掘金 (juejin.cn)](https://juejin.cn/post/7016699018096934943)
+
+- [【LeetCode】设计链表II —— JavaScript实现双向链表 - 掘金 (juejin.cn)](https://juejin.cn/post/7022639889929732133)
+
+
+既然是对象存储的，那就需要构造函数来创建结点了。
+```js
+function ListNode(val) {
+    this.val = val;
+    this.next = null;
+}
+```
+
+创建结点对象
+```js
+const node = new ListNode(1)  
+node.next = new ListNode(2)
+```
+
+## 链表元素添加
+
+![image.png](https://p6-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/697069ba9a5b4b0496f9c01bf867cb68~tplv-k3u1fbpfcp-watermark.image?)
+
+```js
+// 如果目标结点本来不存在，那么记得手动创建
+const node3 = new ListNode(3)     
+// 把node3的 next 指针指向 node2（即 node1.next）
+node3.next = node1.next
+// 把node1的 next 指针指向 node3
+node1.next = node3
+```
+
+## 链表元素删除
+
+在涉及链表删除操作的题目中，重点不是定位目标结点，而是定位目标结点的前驱结点。
+
+## 链表元素访问
+```js
+// 记录目标结点的位置
+const index = 10  
+// 设一个游标指向链表第一个结点，从第一个结点开始遍历
+let node = head  
+// 反复遍历到第10个结点为止
+for(let i=0;i<index&&node;i++) {
+    node = node.next
+}
+```
+## 数组与链表
+
+
+- 链表的插入/删除效率较高，而访问效率较低；
+- 数组的访问效率较高，而插入效率较低。
+
+
+
+## 树和二叉树
+
+树的基本概念
+
+- 树的层次计算规则：根结点所在的那一层记为第一层，其子结点所在的就是第二层，以此类推。
+- 结点和树的“高度”计算规则：叶子结点高度记为1，每向上一层高度就加1，逐层向上累加至目标结点时，所得到的的值就是目标结点的高度。树中结点的最大高度，称为“树的高度”。
+- “度”的概念：一个结点开叉出去多少个子树，被记为结点的“度”。比如我们上图中，根结点的“度”就是3。
+- “叶子结点”：叶子结点就是度为0的结点。在上图中，最后一层的结点的度全部为0，所以这一层的结点都是叶子结点。
+
+二叉树的概念
+
+- 它可以没有根结点，作为一棵空树存在
+- 如果它不是空树，那么必须由根结点、左子树和右子树组成，且左右子树都是二叉树。如下图：
+
+> 二叉树不能被简单定义为每个结点的度都是2的树。普通的树并不会区分左子树和右子树，但在二叉树中，左右子树的位置是严格约定、不能交换的。
+
+## 二叉树的存储
+
+在 JS 中，二叉树使用对象来定义。它的结构分为三块：
+
+- 数据域
+- 左侧子结点（左子树根结点）的引用
+- 右侧子结点（右子树根结点）的引用
+
+```js
+// 二叉树结点的构造函数
+function TreeNode(val) {
+    this.val = val;
+    this.left = null;
+    this.right = null;
+}
+```
+
+![image.png](https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/ff2f803c82a3465ba3cad32e2c848df9~tplv-k3u1fbpfcp-watermark.image?)
+
+## 二叉树的遍历
+
+[【LeetCode】二叉树的结构与遍历 - 掘金 (juejin.cn)](https://juejin.cn/post/7014751439155101727)
+
+- 【先序遍历】 根结点 -> 左子树 -> 右子树
+- 【中序遍历】 左子树 -> 根结点 -> 右子树
+- 【后序遍历】 左子树 -> 右子树 -> 根结点
+
+
+### 先序遍历
+
+[144. 二叉树的前序遍历 - 力扣（LeetCode） (leetcode-cn.com)](https://leetcode-cn.com/problems/binary-tree-preorder-traversal/)
+
+【先序遍历】 根结点 -> 左子树 -> 右子树
+
+```js
+function preorder(root){
+  // 递归边界
+  if(!root) return
+
+  // 输出当前遍历的结点值
+  console.log(root.val)
+  // 递归遍历左子树 
+  preorder(root.left)
+  // 递归遍历右子树
+  preorder(root.right)
+}
+```
+
+
+
+
+
+### 中序遍历
+
+[94. 二叉树的中序遍历 - 力扣（LeetCode） (leetcode-cn.com)](https://leetcode-cn.com/problems/binary-tree-inorder-traversal/)
+
+【中序遍历】 左子树 -> 根结点 -> 右子树
+
+```js
+function preorder(root){
+  // 递归边界
+  if(!root) return
+
+  // 递归遍历左子树 
+  preorder(root.left)
+  // 输出当前遍历的结点值
+  console.log(root.val)
+  // 递归遍历右子树
+  preorder(root.right)
+}
+```
+
+
+### 后序遍历
+
+[145. 二叉树的后序遍历 - 力扣（LeetCode） (leetcode-cn.com)](https://leetcode-cn.com/problems/binary-tree-postorder-traversal/)
+
+【后序遍历】 左子树 -> 右子树 -> 根结点
+
+```js
+function preorder(root){
+  // 递归边界
+  if(!root) return
+
+  // 递归遍历左子树 
+  preorder(root.left)
+  // 递归遍历右子树
+  preorder(root.right)
+  // 输出当前遍历的结点值
+  console.log(root.val)
+}
+```
+
+# 时间复杂度
+
+算法的时间复杂度，它反映的不是算法的逻辑代码到底被执行了多少次，而是随着输入规模的增大，算法对应的执行总次数的一个变化趋势。
+
+
+> 补充知识 对数
+> 
+> logN 默认是以2为低的对数
+> 
+> log1024相当于问“将多少个2相乘的结果为1024” 即 2的多上次方是1024？  答案是10
+
+
+![image.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/5c049b5feb3c466fa7db1e8f3024b798~tplv-k3u1fbpfcp-watermark.image?)
+
+# 空间复杂度
+
+空间复杂度是对一个算法在运行过程中临时占用存储空间大小的量度。和时间复杂度相似，它是内存增长的趋势。
+
+
+
+# 数组的应用
+
+## 两数之和
+
+> 当发现自己的代码里有两层循环时，先反思一下，能不能用空间换时间，把它优化成一层循环。
+
+几乎所有的求和问题，都可以转化为求差问题
+
+利用Map
+
+## 合并两个有序数组
+
+> 双指针法
+
+双指针法一方面可以做到空间换时间；另一方面，也可以降低问题的复杂度
+
+双指针法用在涉及求和、比大小类的数组题目里时，大前提往往是：该数组必须有序。否则双指针根本无法帮助我们缩小定位的范围，压根没有意义。
+## 三数之和
+
+> 对撞指针 -  关键词：“有序”和“数组”
+
+即使题目没有给有序，我们也可以自己手动排序
+
+
+# 字符串的应用
+
+## 反转字符串
+
+```js
+// 定义被反转的字符串 
+const str = 'juejin' 
+
+// 定义反转后的字符串
+const res = str.split('').reverse().join('')
+
+console.log(res) // nijeuj
+```
+
+
+## 判断一个字符串是否是回文字符串
+
+回文：要想到 **对称性** 和 **双指针**
+
+
+
+## 字符串匹配
+
+```js
+/**
+ * 构造函数
+ */
+const WordDictionary = function () {
+  // 初始化一个对象字面量，承担 Map 的角色
+  this.words = {}
+};
+
+/**
+  添加字符串的方法
+ */
+WordDictionary.prototype.addWord = function (word) {
+  // 若该字符串对应长度的数组已经存在，则只做添加
+  if (this.words[word.length]) {
+    this.words[word.length].push(word)
+  } else {
+    // 若该字符串对应长度的数组还不存在，则先创建
+    this.words[word.length] = [word]
+  }
+
+};
+
+/**
+  搜索方法
+ */
+WordDictionary.prototype.search = function (word) {
+  // 若该字符串长度在 Map 中对应的数组根本不存在，则可判断该字符串不存在
+  if (!this.words[word.length]) {
+    return false
+  }
+  // 缓存目标字符串的长度
+  const len = word.length
+  // 如果字符串中不包含‘.’，那么一定是普通字符串
+  if (!word.includes('.')) {
+    // 定位到和目标字符串长度一致的字符串数组，在其中查找是否存在该字符串
+    return this.words[len].includes(word)
+
+  }
+
+  // 否则是正则表达式，要先创建正则表达式对象
+  const reg = new RegExp(word)
+
+  // 只要数组中有一个匹配正则表达式的字符串，就返回true
+  return this.words[len].some((item) => {
+    return reg.test(item)
+  })
+};
+```
+
+## 字符串与数字之间的转换问题
+
+正则表达式
+
+```
+/\s*([-\+]?[0-9]*).*/
+```
+
+- `\s` 这个符号，意味着空字符，它可以用来匹配回车、空格、换行等空白区域，这里，它用来被匹配空格。
+- `*` 这个符号，跟在其它符号后面，意味着“前面这个符号可以出现0次或多次。
+- `\s*`，这里的意思就是空格出现0次或多次，都可被匹配到。
+- `()` 圈住的内容，就是我们要捕获起来额外存储的东西。
+- `[]`中的匹配符之间是“或”的关系，也就是说只要能匹配上其中一个就行了。
+- `[-\+]`，`-`不必说匹配的是对应字符，这个`\+`之所以加了一个斜杠符，是因为`+`本身是一个有特殊作用的正则匹配符，这里我们要让它回归`+`字符的本义，所以要用一个`\`来完成转义。
+- `[0-9]*`结合咱们前面铺陈的知识，这个就不难理解了，它的意思是 0-9 之间的整数，能匹配到0个或多个就算匹配成功。
+- `.`这个是任意字符的意思，`.*`用于字符串尾部匹配非数字的任意字符。
+- 我们看到`.*`是被排除捕获组之外的，所以说这个东西其实也不会被额外存储，它被“摘除”了。
+
+JS 的正则相关方法中， `test()`方法返回的是一个布尔值，单纯判断“是否匹配”。要想获取匹配的结果，我们需要调度`match()`方法。`match()` 方法是一个在字符串中执行查找匹配的`String`方法，它返回一个数组，在未匹配到时会返回 `null`。
+
+```js
+// 入参是一个字符串
+const myAtoi = function(str) {
+    // 编写正则表达式
+    const reg = /\s*([-\+]?[0-9]*).*/
+    // 得到捕获组
+    const groups = str.match(reg)
+    // 计算最大值
+    const max = Math.pow(2,31) - 1
+    // 计算最小值
+    const min = -max - 1
+    // targetNum 用于存储转化出来的数字
+    let targetNum = 0
+    // 如果匹配成功
+    if(groups) {
+        // 尝试转化捕获到的结构
+        targetNum = +groups[1]
+        // 注意，即便成功，也可能出现非数字的情况，比如单一个'+'
+        if(isNaN(targetNum)) {
+            // 不能进行有效的转换时，请返回 0
+            targetNum = 0
+        }
+    }
+    // 卡口判断
+    if(targetNum > max) {
+        return max
+    } else if( targetNum < min) {
+        return min
+    }
+    // 返回转换结果
+    return targetNum
+};
+```
+# 链表
+
+- 链表的处理：合并、删除等（删除操作画个记号，重点中的重点！）
+- 链表的反转及其衍生题目
+- 链表成环问题及其衍生题目
+
+
+## 合并两个有序链表
+
+
+## 链表结点的删除
+
+
