--- a/docs/fe_advance/React/React_basics/01入门概述.md
+++ b/docs/fe_advance/React/React_basics/01入门概述.md
@@ -27,6 +27,7 @@ React是一个将数据渲染为HTML视图的开源JavaScript库
 **重排**(reflow)：当DOM的变化影响了元素的几何信息(DOM对象的位置和尺寸大小)，浏览器需要重新计算元素的几何属性，将其安放在界面中的正确位置，这个过程叫做重排
 
 ### 【补充】模块化与组件化
+
 - 模块
     1. 理解：向外提供特定功能的js程序, 一般就是一个js文件
     2. 为什么要拆成模块：随着业务逻辑增加，代码越来越多且复杂。
@@ -71,7 +72,7 @@ React是一个将数据渲染为HTML视图的开源JavaScript库
 
 ## 2.2 使用JSX创建虚拟DOM
 
-```javascript
+```jsx
 const VDOM = <h1>Hello,React</h1>
 ```
 
@@ -155,7 +156,7 @@ React.createElement(
 > 可以在 if 语句和 for 循环的代码块中使用 JSX，将 JSX 赋值给变量，把 JSX 当作参数传入，以及从函数中返回 JSX
 
 
-```javascript
+```html
 <div id="test"></div>
 
 <script type="text/javascript" src="../js/react.development.js"></script>
@@ -223,7 +224,7 @@ debugger;
 1. 定义虚拟DOM时，不要写引号。
 2. 标签中混入**JS表达式时**要用 `{ }`。
 3. 样式的类名指定不要用 class，要用 `className`。（因为class是ES6中类的关键字，所以不让用）
-4. 内联样式，要用 `style={{ key:value }}` 的形式去写。
+4. 内联样式，要用 style = /{/{ key: value /}/} 的形式去写。
 5. 只有一个根标签
 6. 标签必须闭合
 7. 标签首字母
@@ -252,13 +253,8 @@ debugger;
 
     3) `switch( ){case:xxxx}`
 
-
 ## 5.3 总结
 
 1) 遇到 `<` 开头的代码, 以标签的语法解析: html同名标签转换为html同名元素, 其它标签需要特别解析
 
 2) 遇到以 `{` 开头的代码，以JS语法解析: 标签中的js表达式必须用`{ }`包含
-
-
-
-
