--- a/docs/basics/cs_basics/browser/05js执行机制.md
+++ b/docs/basics/cs_basics/browser/05js执行机制.md
@@ -48,6 +48,59 @@ myname = '极客时间'
 
 ## 调用栈
 
+哪些情况下代码会在执行之前进行编译并创建执行上下文：
+- 当 JavaScript **执行全局代码**的时候，会编译全局代码并创建全局执行上下文，而且在整个页面的生存周期内，全局执行上下文只有一份。
+- 当**调用一个函数**的时候，函数体内的代码会被编译，并创建函数执行上下文，一般情况下，函数执行结束之后，创建的函数执行上下文会被销毁。
+- 当**使用 eval 函数**的时候，eval 的代码也会被编译，并创建执行上下文。
+
+```js
+var a = 2
+function add(){
+  var b = 10
+  return a + b
+}
+add()
+```
+在执行到函数 add() 之前，JavaScript 引擎会为上面这段代码创建全局执行上下文，包含了声明的函数和变量
+
+- 首先，从全局执行上下文中，取出 add 函数代码。
+- 其次，对 add 函数的这段代码进行编译，并创建该函数的执行上下文和可执行代码。
+- 最后，执行代码，输出结果。
+
+![image.png](https://p9-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/99b2650693404a3fad2dda99a204822c~tplv-k3u1fbpfcp-watermark.image?)
+
+
+当执行到 add 函数的时候，我们就有了两个执行上下文了——全局执行上下文和 add 函数的执行上下文。所以需要管理这些执行上下文。
+
+JavaScript 引擎正是利用栈的这种结构来管理执行上下文的。在执行上下文创建好后，JavaScript 引擎会将执行上下文压入栈中，通常把这种用来管理执行上下文的栈称为执行上下文栈，又称调用栈。
+
+
+
+```js
+var a = 2
+function add(b, c){
+  return b + c
+}
+function addAll(b, c){
+  var d = 10
+  result = add(b, c)
+  return a + result + d
+}
+addAll(3, 6)
+```
+
+第一步，创建全局上下文，并将其压入栈底。全局执行上下文压入到调用栈后，JavaScript 引擎便开始执行全局代码了
+
+
+使用断电调试，可以看到函数的调用栈，或者也可以使用`console.trace()`来打印出当前的函数调用关系
+
+栈是有大小的，当入栈的执行上下文超过一定数目，JavaScript 引擎就会报错，我们把这种错误叫做栈溢出
+
+总结
+- 每调用一个函数，JavaScript 引擎会为其创建执行上下文，并把该执行上下文压入调用栈，然后 JavaScript 引擎开始执行函数代码。
+- 如果在一个函数 A 中调用了另外一个函数 B，那么 JavaScript 引擎会为 B 函数创建执行上下文，并将 B 函数的执行上下文压入栈顶。
+- 当前函数执行完毕后，JavaScript 引擎会将该函数的执行上下文弹出栈。
+- 当分配的调用栈空间被占满时，会引发“堆栈溢出”问题。
 
 
 ## 块级作用域
