--- a/docs/basics/cs_basics/browser/05js执行机制.md
+++ b/docs/basics/cs_basics/browser/05js执行机制.md
@@ -75,7 +75,6 @@ add()
 JavaScript 引擎正是利用栈的这种结构来管理执行上下文的。在执行上下文创建好后，JavaScript 引擎会将执行上下文压入栈中，通常把这种用来管理执行上下文的栈称为执行上下文栈，又称调用栈。
 
 
-
 ```js
 var a = 2
 function add(b, c){
@@ -92,7 +91,7 @@ addAll(3, 6)
 第一步，创建全局上下文，并将其压入栈底。全局执行上下文压入到调用栈后，JavaScript 引擎便开始执行全局代码了
 
 
-使用断电调试，可以看到函数的调用栈，或者也可以使用`console.trace()`来打印出当前的函数调用关系
+使用断点调试，可以看到函数的调用栈，或者也可以使用`console.trace()`来打印出当前的函数调用关系
 
 栈是有大小的，当入栈的执行上下文超过一定数目，JavaScript 引擎就会报错，我们把这种错误叫做栈溢出
 
@@ -105,7 +104,96 @@ addAll(3, 6)
 
 ## 块级作用域
 
+**作用域**是指在程序中定义变量的区域，该位置决定了变量的生命周期。通俗地理解，作用域就是变量与函数的可访问范围，即作用域控制着变量和函数的可见性和生命周期。
 
+在 ES6 之前，ES 的作用域只有两种：全局作用域和函数作用域。
+- 全局作用域中的对象在代码中的任何地方都能访问，其生命周期伴随着页面的生命周期。
+- 函数作用域就是在函数内部定义的变量或者函数，并且定义的变量或者函数只能在函数内部被访问。函数执行结束之后，函数内部定义的变量会被销毁。
+
+```js
+var myname = "极客时间"
+function showName(){
+  console.log(myname); // undefined
+  if(0){
+    var myname = "极客邦"
+  }
+  console.log(myname); // undefined
+}
+showName()
+
+
+function varTest() {
+  var x = 1;
+  if (true) {
+    var x = 2;  // 同样的变量!
+    console.log(x);  // 2
+  }
+  console.log(x);  // 2
+}
+```
+
+没有块级作用域，再把作用域内部的变量统一提升无疑是最快速、最简单的设计，不过这也直接导致了函数中的变量无论是在哪里声明的，在编译阶段都会被提取到执行上下文的变量环境中，所以这些变量在整个函数体内部的任何地方都是能被访问的，这也就是 JavaScript 中的变量提升。
+
+ES6出现了`let`、`const`，产生了块级作用域。在编译阶段，JavaScript 引擎并不会把块中通过 let 声明的变量存放到变量环境中，并不会提升到全函数可见。
+
+JavaScript 引擎是通过变量环境实现函数级作用域的，那么 ES6 又是如何在函数级作用域的基础之上，实现对块级作用域的支持呢？
+
+```js
+function foo(){
+  var a = 1
+  let b = 2
+  {
+    let b = 3
+    var c = 4
+    let d = 5
+    console.log(a)
+    console.log(b)
+  }
+  console.log(b) 
+  console.log(c)
+  console.log(d)
+} 
+foo()
+```
+当执行上面这段代码的时候，JavaScript 引擎会先对其进行编译并创建执行上下文，然后再按照顺序执行代码
+
+1. 第一步是**编译**并**创建执行上下文**
+
+   - 函数内部通过`var`声明的变量，在编译阶段全都被存放到变量环境中
+   - 通过`let`声明的变量，在编译阶段会被存放到词法环境（Lexical Environment）中
+   - 在函数的作用域中块的内部，通过`let`声明的变量并没有被存放到词法环境中
+
+![image.png](https://p9-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/e5fc8217f0c94c1fa3c97e681bd3ff5e~tplv-k3u1fbpfcp-watermark.image?)
+
+执行函数时才有进行编译，抽象语法树(AST）在进入函数阶段就生成了，并且函数内部作用域是已经明确了，所以进入块级作用域不会有编译过程，只不过通过let或者const声明的变量会在进入块级作用域的时被创建，但是在该变量没有赋值之前，引用该变量JavaScript引擎会抛出错误---这就是“暂时性死区”
+
+
+2. 第二步继续**执行**代码
+
+当进入函数的作用域块时，作用域块中通过 let 声明的变量，会被存放在词法环境的一个单独的区域中，这个区域中的变量并不影响作用域块外面的变量，比如在作用域外面声明了变量 b，在该作用域块内部也声明了变量 b，当执行到作用域内部时，它们都是独立的存在。
+
+![image.png](https://p6-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/e245e33f40c242d788c8c5b3a4f84244~tplv-k3u1fbpfcp-watermark.image?)
+
+其实，在词法环境内部，维护了一个小型栈结构，栈底是函数最外层的变量，进入一个作用域块后，就会把该作用域块内部的变量压到栈顶；当作用域执行完成之后，该作用域的信息就会从栈顶弹出，这就是词法环境的结构。需要注意下，我这里所讲的变量是指通过 let 或者 const 声明的变量。
+
+再接下来，当执行到作用域块中的`console.log(a)`这行代码时，就需要在词法环境和变量环境中查找变量 a 的值了，具体查找方式是：沿着词法环境的栈顶向下查询，如果在词法环境中的某个块中查找到了，就直接返回给 JavaScript 引擎，如果没有查找到，那么继续在变量环境中查找。
+
+![image.png](https://p9-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/7fdfd23e99a9462889d61cefd5162f19~tplv-k3u1fbpfcp-watermark.image?)
+
+当作用域块执行结束之后，其内部定义的变量就会从词法环境的栈顶弹出
+
+
+![image.png](https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/6aff83b61db34d60b845ab9d27941550~tplv-k3u1fbpfcp-watermark.image?)
+
+
+> 块级作用域就是通过词法环境的栈结构来实现的，而变量提升是通过变量环境来实现，通过这两者的结合，JavaScript 引擎也就同时支持了变量提升和块级作用域了。
+
+
+总结
+
+- `var` 的创建和初始化被提升，赋值不会被提升
+- `let` 的创建被提升，初始化和赋值不会被提升
+- `function` 的创建、初始化和赋值均会被提升
 
 
 ## 作用域链与闭包
