--- a/docs/basics/cs_basics/browser/05js执行机制.md
+++ b/docs/basics/cs_basics/browser/05js执行机制.md
@@ -198,6 +198,73 @@ foo()
 
 ## 作用域链与闭包
 
+![image.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/af8d0ad8e2304793bd4877b89f36e97f~tplv-k3u1fbpfcp-watermark.image?)
+
+作用域链
+
+![image.png](https://p6-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/f4fe3e99542349888b45b5202563e732~tplv-k3u1fbpfcp-watermark.image?)
+
+词法作用域就是指作用域是由代码中函数声明的位置来决定的，所以词法作用域是静态的作用域，通过它就能够预测代码在执行过程中如何查找标识符。
+
+
+词法作用域是代码编译阶段就决定好的，和函数是怎么调用的没有关系
+
+![image.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/f29c5470fa5d4fe5a51bbe2783d5a6e6~tplv-k3u1fbpfcp-watermark.image?)
+
+词法作用域就是根据代码的位置来决定的，其中 main 函数包含了 bar 函数，bar 函数中包含了 foo 函数，因为 JavaScript 作用域链是由词法作用域决定的，所以整个词法作用域链的顺序是：foo 函数作用域—>bar 函数作用域—>main 函数作用域—> 全局作用域。
+
+```js
+function foo() {
+  var myName = "极客时间"
+  let test1 = 1
+  const test2 = 2
+  var innerBar = {
+    getName:function(){
+      console.log(test1)
+      return myName
+    },
+    setName:function(newName){
+      myName = newName
+    }
+  }
+  return innerBar
+}
+var bar = foo()
+bar.setName("极客邦")
+bar.getName()
+console.log(bar.getName())
+```
+
+首先我们看看当执行到 foo 函数内部的return innerBar这行代码时调用栈的情况
+
+![image.png](https://p9-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/4c43ed2ff9014baea3a3de15cc0b3082~tplv-k3u1fbpfcp-watermark.image?)
+
+innerBar 是一个对象，包含了 getName 和 setName 的两个方法（通常我们把对象内部的函数称为方法）。你可以看到，这两个方法都是在 foo 函数内部定义的，并且这两个方法内部都使用了 myName 和 test1 两个变量
+
+根据词法作用域的规则，内部函数 getName 和 setName 总是可以访问它们的外部函数 foo 中的变量，所以当 innerBar 对象返回给全局变量 bar 时，虽然 foo 函数已经执行结束，但是 getName 和 setName 函数依然可以使用 foo 函数中的变量 myName 和 test1
+
+![image.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/ded3f31f623f43278bd4d1e745e32898~tplv-k3u1fbpfcp-watermark.image?)
+
+
+
+
+从上图可以看出，foo 函数执行完成之后，其执行上下文从栈顶弹出了，但是由于返回的 setName 和 getName 方法中使用了 foo 函数内部的变量 myName 和 test1，所以这两个变量依然保存在内存中。这像极了 setName 和 getName 方法背的一个专属背包，无论在哪里调用了 setName 和 getName 方法，它们都会背着这个 foo 函数的专属背包。
+
+之所以是专属背包，是因为除了 setName 和 getName 函数之外，其他任何地方都是无法访问该背包的，我们就可以把这个背包称为 foo 函数的闭包。
+
+
+在 JavaScript 中，根据词法作用域的规则，内部函数总是可以访问其外部函数中声明的变量，当通过调用一个外部函数返回一个内部函数后，即使该外部函数已经执行结束了，但是内部函数引用外部函数的变量依然保存在内存中，我们就把这些变量的集合称为闭包。比如外部函数是 foo，那么这些变量的集合就称为 foo 函数的闭包。
+
+
+当执行到 bar.setName 方法中的myName = "极客邦"这句代码时，JavaScript 引擎会沿着“当前执行上下文–>foo 函数闭包–> 全局执行上下文”的顺序来查找 myName 变量
+
+
+![image.png](https://p6-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/109dcc3ce5ac49acaf0a32334fa64d6e~tplv-k3u1fbpfcp-watermark.image?)
+
+从图中可以看出，setName 的执行上下文中没有 myName 变量，foo 函数的闭包中包含了变量 myName，所以调用 setName 时，会修改 foo 闭包中的 myName 变量的值。同样的流程，当调用 bar.getName 的时候，所访问的变量 myName 也是位于 foo 函数闭包中的。
+
+
+如果该闭包会一直使用，那么它可以作为全局变量而存在；但如果使用频率不高，而且占用内存又比较大的话，那就尽量让它成为一个局部变量。
 
 
 ## this
