--- a/docs/basics/cs_basics/v8/01栈空间与堆空间.md
+++ b/docs/basics/cs_basics/v8/01栈空间与堆空间.md
@@ -1,18 +1,14 @@
-JavaScript内存机制
 
-- 数据在内容中的存放
-- 垃圾回收
-- 执行代码
-
-
-JavaScript的数据类型
+### JavaScript的数据类型
 
 - 弱类型：不需要告诉JavaScript引擎你定义的变量的类型，引擎会在运行时自动计算出来
 - 动态类型：可以给同一个变量附上不同类型的值
 
+在JS中可以将数据分成两类，分别是原始类型和引用类型
 
 - 原始类型：undefined | null | number | string | boolean | symbol | bigint
 - 引用类型：object（包括funciton | array）
+
 
 在JavaScript执行过程中，主要有三种类型的内存空间分别是：代码空间、栈空间、堆空间
 
