--- a/docs/basics/cs_basics/browser/06页面循环系统.md
+++ b/docs/basics/cs_basics/browser/06页面循环系统.md
@@ -1,5 +1,22 @@
 ## 消息队列与事件循环
 
+前面我们讲到了每个渲染进程都有一个主线程，并且主线程非常繁忙，既要处理 DOM，又要计算样式，还要处理布局，同时还需要处理 JavaScript 任务以及各种输入事件。要让这么多不同类型的任务在主线程中有条不紊地执行，这就需要一个系统来统筹调度这些任务，这个统筹调度系统就是我们今天要讲的消息队列和事件循环系统。
+
+### 使用单线程处理安排好的任务
+
+在上面的执行代码中，我们把所有任务代码按照顺序写进主线程里，等线程执行时，这些任务会按照顺序在线程中依次被执行；等所有任务执行完成之后，线程会自动退出。
+
+### 在线程运行过程中处理新任务
+
+但并不是所有的任务都是在执行之前统一安排好的，大部分情况下，新的任务是在线程运行过程中产生的。
+
+要想在线程运行过程中，能接收并执行新的任务，就需要采用事件循环机制。
+
+### 处理其他线程发送过来的任务
+
+
+
+### 处理其他进程发送过来的任务
 
 
 
@@ -14,13 +31,321 @@
 
 ## 宏任务与微任务
 
+随着浏览器的应用领域越来越广泛，`消息队列`中这种粗时间颗粒度的任务已经不能胜任部分领域的需求，所以又出现了一种新的技术——`微任务`。微任务可以在实时性和效率之间做一个有效的权衡。
+
+微任务已经被广泛地应用，基于微任务的技术有 MutationObserver、Promise 以及以 Promise 为基础开发出来的很多其他的技术。所以微任务的重要性也与日俱增
+
+### 什么是宏任务
+
+页面中的大部分任务都是在主线程上执行的
+
+- 渲染事件（如解析 DOM、计算布局、绘制）
+- 用户交互事件（如鼠标点击、滚动页面、放大缩小等）
+- JavaScript 脚本执行事件
+- 网络请求完成、文件读写完成事件
+
+为了协调这些任务有条不紊地在主线程上执行，页面进程引入了`消息队列`和`事件循环`机制，渲染进程内部会维护多个消息队列，比如**延迟执行队列**和普通的**消息队列**。然后主线程采用一个 for 循环，不断地从这些任务队列中取出任务并执行任务。我们把这些消息队列中的任务称为`宏任务`。
+
+**消息队列中的任务是通过事件循环系统来执行的** 
+
+WHATWG 规范中是这样定义事件循环机制的：
+1. 先从多个消息队列中选出一个最老的任务，这个任务称为 `oldestTask`
+2. 然后循环系统记录任务开始执行的时间，并把这个 `oldestTask` 设置为当前正在执行的任务
+3. 当任务执行完成之后，删除当前正在执行的任务，并从对应的消息队列中删除掉这个 `oldestTask` 
+4. 最后统计执行完成的时长等信息。
+
+宏任务可以满足我们大部分的日常需求，不过如果有对时间精度要求较高的需求，宏任务就难以胜任了，下面我们就来分析下为什么宏任务难以满足对时间精度要求较高的任务。
+
+前面我们说过，页面的渲染事件、各种 IO 的完成事件、执行 JavaScript 脚本的事件、用户交互的事件等都随时有可能被添加到消息队列中，而且添加事件是由系统操作的，JavaScript 代码不能准确掌控任务要添加到队列中的位置，控制不了任务在消息队列中的位置，所以很难控制开始执行任务的时间。为了直观理解，你可以看下面这段代码：
+
+```js
+function timerCallback2(){
+  console.log(2)
+}
+
+function timerCallback(){
+    console.log(1)
+    setTimeout(timerCallback2,0)
+}
+
+setTimeout(timerCallback,0)
+```
+
+在这段代码中，我的目的是想通过 setTimeout 来设置两个回调任务，并让它们按照前后顺序来执行，中间也不要再插入其他的任务，因为如果这两个任务的中间插入了其他的任务，就很有可能会影响到第二个定时器的执行时间了。
+
+但实际情况是我们不能控制的，比如在你调用 setTimeout 来设置回调任务的间隙，消息队列中就有可能被插入很多**系统级**的任务。你可以打开 Performance 工具，来记录下这段任务的执行过程，也可参考文中我记录的图片：
+
+![image.png](https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/5e75c5c8731b4beaa3355853d54d5840~tplv-k3u1fbpfcp-watermark.image?)
+
+setTimeout 函数触发的回调函数都是`宏任务`，如图中，左右两个黄色块就是 setTimeout 触发的两个定时器任务。
+
+现在你可以重点观察上图中间浅红色区域，这里有很多一段一段的任务，这些是被渲染引擎插在两个定时器任务中间的任务。试想一下，如果中间被插入的任务执行时间过久的话，那么就会影响到后面任务的执行了。
+
+所以说宏任务的时间粒度比较大，执行的时间间隔是不能精确控制的，对一些高实时性的需求就不太符合了，比如后面要介绍的监听 DOM 变化的需求。
+
+### 什么是微任务
+
+异步回调主要有两种方式
+
+- 第一种是把异步回调函数封装成一个宏任务，添加到消息队列尾部，当循环系统执行到该任务的时候执行回调函数。这种比较好理解， setTimeout 和 XMLHttpRequest 的回调函数都是通过这种方式来实现的。
+- 第二种方式的执行时机是在主函数执行结束之后、当前宏任务结束之前执行回调函数，这通常都是以微任务形式体现的。
+
+> `微任务`就是一个需要异步执行的函数，执行时机是在主函数执行结束之后、当前宏任务结束之前
+
+当 JavaScript 执行一段脚本的时候，V8 会为其创建一个**全局执行上下文**，在创建全局执行上下文的同时，V8 引擎也会在内部创建一个`微任务队列`。顾名思义，这个微任务队列就是用来存放微任务的，因为在当前宏任务执行的过程中，有时候会产生多个微任务，这时候就需要使用这个微任务队列来保存这些微任务了。不过这个微任务队列是给 V8 引擎内部使用的，所以你是无法通过 JavaScript 直接访问的。
+
+也就是说**每个宏任务都关联了一个微任务队列**。
+
+接下来，我们就需要分析两个重要的时间点——微任务`产生`的时机和`执行`微任务队列的时机。
+
+我们先来看看微任务是怎么产生的？在现代浏览器里面，产生微任务有两种方式。
+
+- 第一种方式是使用 MutationObserver 监控某个 DOM 节点，然后再通过 JavaScript 来修改这个节点，或者为这个节点添加、删除部分子节点，当 DOM 节点发生变化时，就会产生 DOM 变化记录的微任务。
+
+MutationObserver: https://developer.mozilla.org/zh-CN/docs/Web/API/MutationObserver
+
+- 第二种方式是使用 Promise，当调用 Promise.resolve() 或者 Promise.reject() 的时候，也会产生微任务。
+
+Promise:  https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Promise
+
+通过 DOM 节点变化产生的微任务或者使用 Promise 产生的微任务都会被 JavaScript 引擎按照顺序保存到微任务队列中。
+
+好了，现在微任务队列中有了微任务了，那接下来就要看看微任务队列是何时被执行的。
+
+通常情况下，在当前宏任务中的 JavaScript 快执行完成时，也就在 JavaScript 引擎准备退出全局执行上下文并清空调用栈的时候，JavaScript 引擎会检查全局执行上下文中的微任务队列，然后按照顺序执行队列中的微任务。WHATWG 把执行微任务的时间点称为检查点。当然除了在退出全局执行上下文式这个检查点之外，还有其他的检查点，不过不是太重要，这里就不做介绍了。
+
+如果在执行微任务的过程中，产生了新的微任务，同样会将该微任务添加到微任务队列中，V8 引擎一直循环执行微任务队列中的任务，直到队列为空才算执行结束。也就是说在执行微任务过程中产生的新的微任务并不会推迟到下个宏任务中执行，而是在当前的宏任务中继续执行。
 
 
-
-## promise
-
-
-## async
+![image.png](https://p6-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/5195e9a8c5924f51b4f1dae7a72ebfaf~tplv-k3u1fbpfcp-watermark.image?)
 
 
+![image.png](https://p9-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/3183731ffb15491c9e1d938683d3c890~tplv-k3u1fbpfcp-watermark.image?)
 
+该示意图是在执行一个 ParseHTML 的宏任务，在执行过程中，遇到了 JavaScript 脚本，那么就暂停解析流程，进入到 JavaScript 的执行环境。从图中可以看到，全局上下文中包含了微任务列表。
+
+在 JavaScript 脚本的后续执行过程中，分别通过 Promise 和 removeChild 创建了两个微任务，并被添加到微任务列表中。接着 JavaScript 执行结束，准备退出全局执行上下文，这时候就到了检查点了，JavaScript 引擎会检查微任务列表，发现微任务列表中有微任务，那么接下来，依次执行这两个微任务。等微任务队列清空之后，就退出全局执行上下文。
+
+以上就是微任务的工作流程，从上面分析我们可以得出如下几个结论：
+
+- 微任务和宏任务是绑定的，每个宏任务在执行时，会创建自己的微任务队列。
+- 微任务的执行时长会影响到当前宏任务的时长。比如一个宏任务在执行过程中，产生了 100 个微任务，执行每个微任务的时间是 10 毫秒，那么执行这 100 个微任务的时间就是 1000 毫秒，也可以说这 100 个微任务让宏任务的执行时间延长了 1000 毫秒。所以你在写代码的时候一定要注意控制微任务的执行时长。
+- 在一个宏任务中，分别创建一个用于回调的宏任务和微任务，无论什么情况下，**微任务都早于宏任务执行**。
+
+### 监听 DOM 变化方法演变
+
+现在知道了微任务是怎么工作的，那接下来我们再来看看微任务是如何应用在 MutationObserver 中的。MutationObserver 是用来监听 DOM 变化的一套方法，而监听 DOM 变化一直是前端工程师一项非常核心的需求。
+
+比如许多 Web 应用都利用 HTML 与 JavaScript 构建其自定义控件，与一些内置控件不同，这些控件不是固有的。为了与内置控件一起良好地工作，这些控件必须能够适应内容更改、响应事件和用户交互。因此，Web 应用需要监视 DOM 变化并及时地做出响应。
+
+虽然监听 DOM 的需求是如此重要，不过早期页面并没有提供对监听的支持，所以那时要观察 DOM 是否变化，唯一能做的就是**轮询检测**，比如使用 setTimeout 或者 setInterval 来定时检测 DOM 是否有改变。这种方式简单粗暴，但是会遇到两个问题：
+- 如果时间间隔设置过长，DOM 变化响应不够及时；
+- 反过来如果时间间隔设置过短，又会浪费很多无用的工作量去检查 DOM，会让页面变得低效。
+
+直到 2000 年的时候引入了 Mutation Event，Mutation Event 采用了观察者的设计模式，当 DOM 有变动时就会立刻触发相应的事件，这种方式属于**同步回调**。
+
+采用 Mutation Event 解决了实时性的问题，因为 DOM 一旦发生变化，就会立即调用 JavaScript 接口。但也正是这种实时性造成了严重的性能问题，因为每次 DOM 变动，渲染引擎都会去调用 JavaScript，这样会产生较大的性能开销。比如利用 JavaScript 动态创建或动态修改 50 个节点内容，就会触发 50 次回调，而且每个回调函数都需要一定的执行时间，这里我们假设每次回调的执行时间是 4 毫秒，那么 50 次回调的执行时间就是 200 毫秒，若此时浏览器正在执行一个动画效果，由于 Mutation Event 触发回调事件，就会导致动画的卡顿。
+
+也正是因为使用 Mutation Event 会导致页面性能问题，所以 Mutation Event 被反对使用，并逐步从 Web 标准事件中删除了。
+
+为了解决了 Mutation Event 由于同步调用 JavaScript 而造成的性能问题，从 DOM4 开始，推荐使用 MutationObserver 来代替 Mutation Event。MutationObserver API 可以用来监视 DOM 的变化，包括属性的变化、节点的增减、内容的变化等。
+
+那么相比较 Mutation Event，MutationObserver 到底做了哪些改进呢？
+
+首先，MutationObserver 将响应函数改成**异步调用**，可以不用在每次 DOM 变化都触发异步调用，而是等多次 DOM 变化后，一次触发异步调用，并且还会使用一个数据结构来记录这期间所有的 DOM 变化。这样即使频繁地操纵 DOM，也不会对性能造成太大的影响。
+
+我们通过`异步调用`和`减少触发次数`来缓解了性能问题，那么如何保持消息通知的及时性呢？如果采用 setTimeout 创建宏任务来触发回调的话，那么实时性就会大打折扣，因为上面我们分析过，在两个任务之间，可能会被渲染进程插入其他的事件，从而影响到响应的实时性。
+
+这时候，微任务就可以上场了，在每次 DOM 节点发生变化的时候，渲染引擎将变化记录封装成`微任务`，并将微任务添加进当前的微任务队列中。这样当执行到检查点的时候，V8 引擎就会按照顺序执行微任务了。
+
+综上所述， MutationObserver 采用了“异步 + 微任务”的策略。
+
+- 通过异步操作解决了同步操作的性能问题；
+- 通过微任务解决了实时性的问题。
+
+## async/await
+
+本文我们首先介绍生成器（Generator）是如何工作的，接着讲解 Generator 的底层实现机制——协程（Coroutine）；又因为 async/await 使用了 Generator 和 Promise 两种技术，所以紧接着我们就通过 Generator 和 Promise 来分析 async/await 到底是如何以同步的方式来编写异步代码的。
+
+生成器函数是一个带星号函数，而且是可以暂停执行和恢复执行的。我们可以看下面这段代码：
+
+```js
+function* genDemo() {
+    console.log("开始执行第一段")
+    yield 'generator 2'
+
+    console.log("开始执行第二段")
+    yield 'generator 2'
+
+    console.log("开始执行第三段")
+    yield 'generator 2'
+
+    console.log("执行结束")
+    return 'generator 2'
+}
+
+console.log('main 0')
+
+let gen = genDemo()
+console.log(gen.next().value) // 开始执行第一段 generator 2
+console.log('main 1')
+console.log(gen.next().value) // 开始执行第二段 generator 2
+console.log('main 2')
+console.log(gen.next().value) // 开始执行第三段 generator 2
+console.log('main 3')
+console.log(gen.next().value) // 执行结束 generator 2
+console.log('main 4')
+```
+
+执行上面这段代码，观察输出结果，你会发现函数 genDemo 并不是一次执行完的，全局代码和 genDemo 函数交替执行。其实这就是生成器函数的特性，可以暂停执行，也可以恢复执行。下面我们就来看看生成器函数的具体使用方式：
+
+1. 在生成器函数内部执行一段代码，如果遇到 yield 关键字，那么 JavaScript 引擎将返回关键字后面的内容给外部，并暂停该函数的执行。
+2. 外部函数可以通过 next 方法恢复函数的执行。
+
+关于函数的暂停和恢复，相信你一定很好奇这其中的原理，那么接下来我们就来简单介绍下 JavaScript 引擎 V8 是如何实现一个函数的暂停和恢复的，这也会有助于你理解后面要介绍的 async/await。
+
+要搞懂函数为何能暂停和恢复，那你首先要了解协程的概念。协程是一种比线程更加轻量级的存在。你可以把协程看成是跑在线程上的任务，一个线程上可以存在多个协程，但是在线程上同时只能执行一个协程，比如当前执行的是 A 协程，要启动 B 协程，那么 A 协程就需要将主线程的控制权交给 B 协程，这就体现在 A 协程暂停执行，B 协程恢复执行；同样，也可以从 B 协程中启动 A 协程。通常，如果从 A 协程启动 B 协程，我们就把 A 协程称为 B 协程的父协程。
+
+正如一个进程可以拥有多个线程一样，一个线程也可以拥有多个协程。最重要的是，协程不是被操作系统内核所管理，而完全是由程序所控制（也就是在用户态执行）。这样带来的好处就是性能得到了很大的提升，不会像线程切换那样消耗资源。
+
+为了让你更好地理解协程是怎么执行的，我结合上面那段代码的执行过程，画出了下面的“协程执行流程图”，你可以对照着代码来分析：
+
+![image.png](https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/dc9bc9daa920460b908ebdadaa582271~tplv-k3u1fbpfcp-watermark.image?)
+
+
+1. 通过调用生成器函数 genDemo 来创建一个协程 gen，创建之后，gen 协程并没有立即执行。
+2. 要让 gen 协程执行，需要通过调用 gen.next。
+3. 当协程正在执行的时候，可以通过 yield 关键字来暂停 gen 协程的执行，并返回主要信息给父协程。
+4. 如果协程在执行期间，遇到了 return 关键字，那么 JavaScript 引擎会结束当前协程，并将 return 后面的内容返回给父协程。
+
+不过，对于上面这段代码，你可能又有这样疑问：父协程有自己的调用栈，gen 协程时也有自己的调用栈，当 gen 协程通过 yield 把控制权交给父协程时，V8 是如何切换到父协程的调用栈？当父协程通过 gen.next 恢复 gen 协程时，又是如何切换 gen 协程的调用栈？
+
+要搞清楚上面的问题，你需要关注以下两点内容。
+
+1. gen 协程和父协程是在主线程上交互执行的，并不是并发执行的，它们之前的切换是通过 yield 和 gen.next 来配合完成的。
+
+2. 当在 gen 协程中调用了 yield 方法时，JavaScript 引擎会保存 gen 协程当前的调用栈信息，并恢复父协程的调用栈信息。同样，当在父协程中执行 gen.next 时，JavaScript 引擎会保存父协程的调用栈信息，并恢复 gen 协程的调用栈信息。
+
+![image.png](https://p9-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/0f45b1b4829c449fbf82307ab7260140~tplv-k3u1fbpfcp-watermark.image?)
+
+到这里相信你已经弄清楚了协程是怎么工作的，其实在 JavaScript 中，生成器就是协程的一种实现方式，这样相信你也就理解什么是生成器了。那么接下来，我们使用生成器和 Promise 来改造开头的那段 Promise 代码。改造后的代码如下所示：
+
+
+```js
+//foo函数
+function* foo() {
+    let response1 = yield fetch('https://www.geekbang.org')
+    console.log('response1')
+    console.log(response1)
+    let response2 = yield fetch('https://www.geekbang.org/test')
+    console.log('response2')
+    console.log(response2)
+}
+
+//执行foo函数的代码
+let gen = foo() // 创建 gen 协程
+
+function getGenPromise(gen) {
+    return gen.next().value // 把主线程的控制权交给 gen 协程
+}
+
+getGenPromise(gen).then((response) => {
+    console.log('response1')
+    console.log(response)
+    return getGenPromise(gen)
+}).then((response) => {
+    console.log('response2')
+    console.log(response)
+})
+```
+
+foo 函数是一个生成器函数，在 foo 函数里面实现了用同步代码形式来实现异步操作；但是在 foo 函数外部，我们还需要写一段执行 foo 函数的代码，如上述代码的后半部分所示，那下面我们就来分析下这段代码是如何工作的。
+
+首先执行的是let gen = foo()，创建了 gen 协程。然后在父协程中通过执行 gen.next 把主线程的控制权交给 gen 协程。gen 协程获取到主线程的控制权后，就调用 fetch 函数创建了一个 Promise 对象 response1，然后通过 yield 暂停 gen 协程的执行，并将 response1 返回给父协程。父协程恢复执行后，调用 response1.then 方法等待请求结果。等通过 fetch 发起的请求完成之后，会调用 then 中的回调函数，then 中的回调函数拿到结果之后，通过调用 gen.next 放弃主线程的控制权，将控制权交 gen 协程继续执行下个请求。
+
+以上就是协程和 Promise 相互配合执行的一个大致流程。不过通常，我们把执行生成器的代码封装成一个函数，并把这个执行生成器代码的函数称为执行器（可参考著名的 co 框架），如下面这种方式：
+
+```js
+function* foo() {
+    let response1 = yield fetch('https://www.geekbang.org')
+    console.log('response1')
+    console.log(response1)
+    let response2 = yield fetch('https://www.geekbang.org/test')
+    console.log('response2')
+    console.log(response2)
+}
+
+co(foo());
+```
+
+通过使用生成器配合执行器，就能实现使用同步的方式写出异步代码了，这样也大大加强了代码的可读性。
+
+虽然生成器已经能很好地满足我们的需求了，但是程序员的追求是无止境的，在 ES7 中引入了 async/await，这种方式能够彻底告别执行器和生成器，实现更加直观简洁的代码。其实 async/await 技术背后的秘密就是 Promise 和生成器应用，往低层说就是微任务和协程应用。
+
+我们先来看看 async 到底是什么？根据 MDN 定义，async 是一个通过异步执行并隐式返回 Promise 作为结果的函数。
+
+对 async 函数的理解，这里需要重点关注两个词：**异步执行**和**隐式返回 Promise**。
+
+我们先来看看是如何隐式返回 Promise 的
+
+```js
+async function foo() {
+    return 2
+}
+console.log(foo())  // Promise {<resolved>: 2}
+```
+
+执行这段代码，我们可以看到调用 async 声明的 foo 函数返回了一个 Promise 对象，状态是 resolved
+
+我们知道了 async 函数返回的是一个 Promise 对象，那下面我们再结合文中这段代码来看看 await 到底是什么。
+
+```js
+async function foo() {
+    console.log(1)
+    let a = await 100
+    console.log(a)
+    console.log(2)
+}
+console.log(0)
+foo()
+console.log(3)
+```
+
+观察上面这段代码，你能判断出打印出来的内容是什么吗？这得先来分析 async 结合 await 到底会发生什么。在详细介绍之前，我们先站在协程的视角来看看这段代码的整体执行流程图：
+
+![image.png](https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/5b5ac4d490f043a19b60affce7ed6773~tplv-k3u1fbpfcp-watermark.image?)
+
+首先，执行console.log(0)这个语句，打印出来 0。
+
+紧接着就是执行 foo 函数，由于 foo 函数是被 async 标记过的，所以当进入该函数的时候，JavaScript 引擎会保存当前的调用栈等信息，然后执行 foo 函数中的console.log(1)语句，并打印出 1。
+
+接下来就执行到 foo 函数中的await 100这个语句了，这里是我们分析的重点，因为在执行await 100这个语句时，JavaScript 引擎在背后为我们默默做了太多的事情，那么下面我们就把这个语句拆开，来看看 JavaScript 到底都做了哪些事情。
+
+当执行到await 100时，会默认创建一个 Promise 对象，代码如下所示：
+
+```js
+let promise_ = new Promise((resolve,reject){
+  resolve(100)
+})
+```
+
+在这个 promise_ 对象创建的过程中，我们可以看到在 executor 函数中调用了 resolve 函数，JavaScript 引擎会将该任务提交给微任务队列。
+
+然后 JavaScript 引擎会暂停当前协程的执行，将主线程的控制权转交给父协程执行，同时会将 promise_ 对象返回给父协程。
+
+主线程的控制权已经交给父协程了，这时候父协程要做的一件事是调用 promise_.then 来监控 promise 状态的改变。
+
+接下来继续执行父协程的流程，这里我们执行console.log(3)，并打印出来 3。随后父协程将执行结束，在结束之前，会进入微任务的检查点，然后执行微任务队列，微任务队列中有resolve(100)的任务等待执行，执行到这里的时候，会触发 promise_.then 中的回调函数，如下所示：
+
+```js
+promise_.then((value)=>{
+  //回调函数被激活后
+  //将主线程控制权交给foo协程，并将vaule值传给协程
+})
+```
+
+该回调函数被激活以后，会将主线程的控制权交给 foo 函数的协程，并同时将 value 值传给该协程。
+
+foo 协程激活之后，会把刚才的 value 值赋给了变量 a，然后 foo 协程继续执行后续语句，执行完成之后，将控制权归还给父协程。
+
+以上就是 await/async 的执行流程。正是因为 async 和 await 在背后为我们做了大量的工作，所以我们才能用同步的方式写出异步代码来。
