--- a/docs/fe_advance/typescript/basics/01概述.md
+++ b/docs/fe_advance/typescript/basics/01概述.md
@@ -1,3 +1,5 @@
+# TS概述
+
 参考链接：
 
 - 官网：https://www.typescriptlang.org/ 
@@ -6,7 +8,7 @@
 - 书籍：《深入理解TypeScript》 https://jkchao.github.io/typescript-book-chinese/
 - B站尚硅谷视频：https://www.bilibili.com/video/BV1Xy4y1v7S2
 
-# 一、学习TypeScript的意义
+## 一、学习TypeScript的意义
 
 ![image.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/674754547fd14767b56610dcb0517c94~tplv-k3u1fbpfcp-watermark.image?)
 
@@ -18,7 +20,7 @@
 1. 类型有利于代码的重构，有利于编译器在编译时而不是运行时捕获错误；
 2. 类型是出色的文档形式之一，函数签名是一个定理，而函数体是具体的实现。
 
-## 1. 强类型 VS 弱类型
+### 1. 强类型 VS 弱类型
 
 我们都知道JavaScript是一门弱类型的语言，也就是说，我们定义一个变量，不需要考虑它的类型，比如我们定义一个变量`a`，给它赋值为`1`
 
@@ -42,7 +44,7 @@ a = {name: "YK"}
 
 
 
-## 2. 静态语言 VS 动态语言
+### 2. 静态语言 VS 动态语言
 
 都说JavaScript是动态语言，而Java是静态语言，那他们的区别到底是什么呢？
 
@@ -68,7 +70,7 @@ a = {name: "YK"}
 ![image.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/d919b2063c9b48d49efe6c65247f1762~tplv-k3u1fbpfcp-watermark.image?)
 
 
-# 二、TypeScript特性
+## 二、TypeScript特性
 
 TypeScript作为JavaScript的超集，TypeScript究竟比JavaScript多了哪些特性
 
@@ -89,7 +91,7 @@ TypeScript作为JavaScript的超集，也就是说**JavaScript就是TypeScript**
 
 
 
-# 三、搭建TypeScript环境
+## 三、搭建TypeScript环境
 
 TS代码需要通过编译器编译为JS，然后再交由JS解析器执行，所以我们要搭建TypeScript环境来写我们的TS代码
 
