--- a/docs/fe_advance/typescript/basics/02类型声明.md
+++ b/docs/fe_advance/typescript/basics/02类型声明.md
@@ -1,4 +1,4 @@
-
+# TS类型声明
 > 今天来介绍typescript的类型系统，主要是学习一些语法，是TS学习过程中基础中的基础。
 
 参考链接：
@@ -10,7 +10,7 @@
 - B站尚硅谷视频：https://www.bilibili.com/video/BV1Xy4y1v7S2
 
 
-# 1. 起步
+## 1. 起步
 
 - 类型声明是TS非常重要的一个特点
 - 通过类型声明可以指定TS中变量（参数、形参）的类型
@@ -33,7 +33,7 @@ function yk(参数: 参数类型): 函数返回值类型{
 ```
 这里我们可以看到，就是在变量后面就一个冒号，然后标识其类型就可以了
 
-# 2. 类型
+## 2. 类型
 
 下面我们就来介绍介绍，TypeScript中到底有哪些类型
 
@@ -47,7 +47,7 @@ function yk(参数: 参数类型): 函数返回值类型{
 我们后面会详细的介绍这些你可能不认识的类型
 
 
- ## 2.1 声明变量
+### 2.1 声明变量
 
 如果我们在声明变量指定**类型**后，之后如果给变量赋值为其他类型的值，编辑器会报错，如图所示
 
@@ -59,7 +59,7 @@ n = '1' // 编辑器报错，不能将字符串赋值给number类型的变量
 
 ![image.png](https://p9-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/1bd2303f4a4d412ca823b653814346cb~tplv-k3u1fbpfcp-watermark.image?)
 
-## 2.2 自动类型判断
+### 2.2 自动类型判断
 
 -   TS拥有自动的类型判断机制
 -   当对变量的声明和赋值是同时进行的，TS编译器会**自动判断**变量的类型
@@ -78,7 +78,7 @@ n = '1' // 编辑器报错，不能将字符串赋值给number类型的变量
 
 事实上，显式的类型更有优势的地方是在函数定义的时候
 
-## 2.3 函数声明
+### 2.3 函数声明
 
 我们先回顾下用js声明一个函数的特点：js中的函数是不考虑参数的**类型**和**个数**的
 
@@ -138,13 +138,13 @@ let fn: (a: number, b: number) => number
 
 ![image.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/5d6d067b564a4a63a7b0761cfcc921e7~tplv-k3u1fbpfcp-watermark.image?)
 
-## 2.4 类型详解
+### 2.4 类型详解
 
 
 基本类型我们就不详细谈了，我们来说说TS中一些特殊的类型
 
 
-### void
+#### void
 
 相信熟悉Java或者C的同学应该对`void`也不会陌生，当函数没有返回值的时候，定义函数的返回值类型就是`void`
 
@@ -197,7 +197,7 @@ void 0 // undefined
 
 
 
-### any
+#### any
 
 `any` 表示的是任意类型，一个变量设置类型为 `any` 后，相当于对该变量关闭了TS的类型检测。
 
@@ -221,7 +221,7 @@ c = b
 > `any`类型是多人协作项目的大忌，很可能把Typescript变成AnyScript，通常在不得已的情况下，不应该首先考虑使用此类型。
 
 
-### unknown
+#### unknown
 
 开发的时候有些变量就是事先不知道的类型怎么办呢？可以使用`unknown`
 
@@ -251,7 +251,7 @@ c = b as string
 c = <string>b
 ```
 
-### never
+#### never
 
 `never` 表示永远不会返回结果 
 
@@ -269,7 +269,7 @@ function endless(): never{
 }
 ```
 
-### 对象
+#### 对象
 
 ![image.png](https://p6-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/c466288abb1d4b5cafce4babac445d30~tplv-k3u1fbpfcp-watermark.image?)
 
@@ -304,12 +304,8 @@ obj = {name: 'yk', age: 18, gender: 'male'}
 
 > 其实在ts中，限制对象的类型，我们一般会使用**接口**这种类型~ 
 
-### 函数
 
-
-
-
-### 数组
+#### 数组
 
 比较常用的就是这种方式: 在元素类型后面接上 `[]`:
 ```ts
@@ -326,7 +322,7 @@ let list: Array<number | string> = [1, 2, 3, 'yk']
 ```
 
 
-### 元组 Tuple
+#### 元组 Tuple
 
 元组是TS新出的类型，表示固定长度的`array`
 
@@ -337,7 +333,7 @@ let list: Array<number | string> = [1, 2, 3, 'yk']
 ![image.png](https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/829e83e405cb428ea17b7cde6b95ca8a~tplv-k3u1fbpfcp-watermark.image?)
 
 
-### 字面量
+#### 字面量
 也可以使用字面量去指定变量的类型，这相当于给他设置成了一个常量
 
 ```js
@@ -348,7 +344,7 @@ a = 10
 ![image.png](https://p6-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/1cc10eb32afe400280562bcdec5d3aac~tplv-k3u1fbpfcp-watermark.image?)
 
 
-## 2.5 联合类型
+### 2.5 联合类型
 
 可以给一个变量定义一个联合类型，类型名之间用 `|` 隔开
 
@@ -360,7 +356,7 @@ let gender : "male" | "female"
 此时`gender`只能被赋值成两个值
 
 
-## 2.6 类型别名
+### 2.6 类型别名
 
 这个时候，如果一个类型的字面量类型选择过多，重复编写就比较麻烦，这就可以使用类型别名
 
@@ -391,7 +387,7 @@ let fn: (x: number, y:number) => number // 这里fn表示值
 let fun: fn = (x, y) => x + y
 ```
 
-## 2.7 总结
+### 2.7 总结
 
 
 
@@ -400,7 +396,7 @@ let fun: fn = (x, y) => x + y
 
 
 
-# 3. 类型断言
+## 3. 类型断言
 
 有些情况下，变量的类型对于我们来说是很明确，但是TS编译器却并不清楚，此时，可以通过类型断言来告诉编译器变量的类型，断言有两种形式：
 
