--- a/docs/fe_advance/typescript/basics/03枚举类型.md
+++ b/docs/fe_advance/typescript/basics/03枚举类型.md
@@ -1,6 +1,8 @@
+# TS枚举类型
+
 > 今天我们来简单介绍介绍TS中新增的枚举类型
 
-# 起步
+## 起步
 
 比如我们在定义一个对象的时候
 
@@ -21,7 +23,7 @@ let person = { name: 'yk', gender: 1 }
 我们再举一个形象一点的例子，我们手机里都存储了各种朋友的手机号，记住手机号和人的对应关系可太难了，通讯录像是一个枚举类，将人名与手机号做映射，我们只需要看人名就可以了~
 
 
-# 默认枚举【数字枚举】
+## 默认枚举【数字枚举】
 
 可以定义一个`Gender`枚举类
 
@@ -64,7 +66,7 @@ console.log(Gender['male']) // 0
 console.log(Gender[0]) // male
 ```
 
-# 自定义枚举【字符串枚举】
+## 自定义枚举【字符串枚举】
 
 默认的枚举类型的值都是数字类型的，所以我们称之为数字枚举，默认是从0开始递增的，我们也可以自定义数字，如果只定义第一个，后面的数字就依据你定义的递增
 
@@ -99,7 +101,7 @@ enum Gender {
 }
 ```
 
-# 常量枚举
+## 常量枚举
 
 在`enum`前面加上const，表示常量枚举
 
