--- a/docs/fe_advance/typescript/basics/04配置选项.md
+++ b/docs/fe_advance/typescript/basics/04配置选项.md
@@ -1,9 +1,9 @@
-
+# TS编译选项
 > 今天我们主要来学习TS的编译选项
 
-# 编译TS
+## 编译TS
 
-## 自动编译文件
+### 自动编译文件
 
 编译文件时，使用 -w 指令后，TS编译器会自动监视文件的变化，并在文件发生变化时对文件进行重新编译。
 
@@ -16,7 +16,7 @@ tsc xxx.ts -w
 
 
 
-## 自动编译整个项目
+### 自动编译整个项目
 
 
 首先在项目根目录下创建一个ts的配置文件 `tsconfig.json`，然后就可以使用`tsc`指令，编译项目下的所有ts文件为js文件，当然也可以开启监视模式`tsc -w`监视所有的文件
@@ -130,7 +130,7 @@ tsc xxx.ts -w
 下面我们在介绍tsconfig.json文件中的一些配置选项
 
 
-# 配置选项
+## 配置选项
 
 总览
 
@@ -169,7 +169,7 @@ tsc xxx.ts -w
 ```
 
 
-## ① include 
+### ① include 
 
 > 重要
 
@@ -184,7 +184,7 @@ tsc xxx.ts -w
 
 
 
-## ② exclude
+### ② exclude
 
 -   定义不需要被编译的文件目录
 
@@ -196,7 +196,7 @@ tsc xxx.ts -w
 ```
 
 
-## ③ extends
+### ③ extends
 
 -   定义被继承的配置文件
 
@@ -205,7 +205,7 @@ tsc xxx.ts -w
 "extends": "./configs/base" // 当前配置文件中会自动包含config目录下base.json中的所有配置信息
 ```
 
-## ④ files
+### ④ files
 
 -   指定被编译文件的列表，只有需要编译的文件少时才会用到
 
@@ -224,7 +224,7 @@ tsc xxx.ts -w
 ```
 -   列表中的文件都会被TS编译器所编译
 
-## ⑤ compilerOptions
+### ⑤ compilerOptions
 
 > 重要 编译选项，在compilerOptions中包含多个子选项，用来完成对编译的配置
 
@@ -233,7 +233,7 @@ tsc xxx.ts -w
 
 ![image.png](https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/cccada3a603f4894a256dae246e10722~tplv-k3u1fbpfcp-watermark.image?)
 
-### ① target
+#### ① target
 
 -   设置ts代码编译的目标版本
 
@@ -246,7 +246,7 @@ tsc xxx.ts -w
 ```
 -   如上设置，我们所编写的ts代码将会被编译为ES6版本的js代码
 
-### ② lib
+#### ② lib
 
 -   指定代码运行时所包含的库（宿主环境）
 
@@ -261,7 +261,7 @@ tsc xxx.ts -w
 
 一般来说，如果是运行在浏览器环境下的，就不需要自己单独设置这个
 
-### ③ module
+#### ③ module
 
 -   设置编译后代码使用的模块化系统
 
@@ -274,7 +274,7 @@ tsc xxx.ts -w
 }
 ```
 
-### ④ outDir
+#### ④ outDir
 
 -   编译后文件的所在目录
 
@@ -288,7 +288,7 @@ tsc xxx.ts -w
 ```
 -   设置后编译后的js文件将会生成到dist目录。可以将源码与编译后的代码分开存放
 
-### ⑤ outFile
+#### ⑤ outFile
 
 -   将所有的文件编译为`一个`js文件
 
@@ -303,7 +303,7 @@ tsc xxx.ts -w
 
 这种合并，我们应该交给打包工具去做，我们后面会说
 
-### ⑥ rootDir
+#### ⑥ rootDir
 
 -   指定代码的根目录，默认情况下编译后文件的目录结构会以最长的公共目录为根目录，通过rootDir可以手动指定根目录
 
@@ -314,7 +314,7 @@ tsc xxx.ts -w
 }
 ```
 
-### ⑦ 其他配置
+#### ⑦ 其他配置
 
 | 标题 | 功能 |
 | --- | --- |
@@ -328,7 +328,7 @@ tsc xxx.ts -w
 
 
 
-### ⑧ 严格检查
+#### ⑧ 严格检查
 
 
 | 标题 | 功能 |
@@ -343,7 +343,7 @@ tsc xxx.ts -w
 | strictPropertyInitialization | 严格检查属性是否初始化，默认值：false |
 
 
-### ⑨ 额外检查
+#### ⑨ 额外检查
 
 
 | 标题 | 功能 |
