--- a/docs/fe_advance/typescript/basics/09类型检查机制.md
+++ b/docs/fe_advance/typescript/basics/09类型检查机制.md
@@ -30,26 +30,34 @@ let d = [1] // number[]
 - 设置函数默认参数
 - 确定函数返回值
 
-
 ### 最佳通用类型推断
 
+当有多个类型的时候，会推断成最佳通用的类型
+
 ```ts
-let b = [1, null] // (number | null)[]
+let b = [1, "apple"] // (number | string)[]
 ```
 
 ### 上下文类型推断
 
-通常发生在事件处理中
+从左到右推断，通常发生在事件处理中
 
 ```ts
 window.onkeydown = (event) => { // event: KeyboardEvent
   console.log(event)
 }
 ```
+根据左侧的事件绑定，推断右侧的事件类型
 
 ### 类型断言
 
 如果TS推断的类型不符合你的预期，可以使用类型断言覆盖TS的推断
+
+```ts
+let foo = {}
+foo.bar = 1
+```
+这样会报错，可以这样使用类型断言解决
 
 ```ts
 interface Foo {
@@ -59,20 +67,17 @@ interface Foo {
 let foo = {} as Foo
 foo.bar = 1
 
-// 最好还是这样用吧
+// 最好还是在声明的时候就指定类型
 let foo1: Foo = {
   bar: 1
 }
 ```
 
-
 ## 类型兼容性
 
 当一个类型Y可以被赋值给另一个类型X时，我们就可以说类型`X`兼容类型`Y`
 
-X兼容Y: X(目标类型)=Y(源类型)
-
-
+X兼容Y: X(目标类型)=Y(源类型)，也就是说Y是X的子类型
 
 设置 `strictNullChecks: false`
 
@@ -100,17 +105,15 @@ interface Y {
 let x: X = {a: 1, b: 2}
 let y: Y = {a: 1, b: 2, c: 3}
 
-x = y // X类型可以兼容Y类型：鸭式辩型
+x = y // X类型可以兼容Y类型：鸭式辩型[源类型具备目标类型的必要属性；能多不能少]
 y = x // Property 'c' is missing in type 'X' but required in type 'Y'.
 ```
 
-接口之间相互兼容：成员少的会兼容成员多的
-
+> 接口之间相互兼容：成员`少`的会兼容成员`多`的.
 
 ### 函数的兼容性
 
-参数个数的兼容性
-
+首先定义一个函数类型，再定义一个高阶函数，接受这个函数类型的函数
 ```ts
 type Handler = (a: number, b: number) => void
 
@@ -118,14 +121,19 @@ function hof(handler: Handler){
   return handler
 }
 
-// 参数个数
+#### 参数个数
+
+```
+函数参数固定的时候
+```ts
 let handler1 = (a: number) => {}
-hof(handler1)
+hof(handler1) // 可以少传
+
 let handler2 = (a: number, b:number, c: number) => {}
 hof(handler2) // Argument of type '(a: number, b: number, c: number) => void' is not assignable to parameter of type 'Handler'.
 ```
 
-可选参数与剩余参数
+函数参数不固定的时候：可选参数与剩余参数
 ```ts
 let a = (x: number, y: number) => {}
 let b = (x?: number, y?: number) => {}
@@ -138,11 +146,18 @@ b = c // error
 c = a
 c = b
 ```
-- 固定参数 兼容 可选参数与剩余参数
-- 可选参数 不兼容 固定参数与剩余参数 (通过 `structFunctionTypes: false` 可以关闭)
-- 剩余参数 兼容 固定参数与可选参数
 
-参数类型
+- 固定参数 `兼容` 可选参数与剩余参数
+- 可选参数 `不兼容` 固定参数与剩余参数 (通过 `strictFunctionTypes: false` 可以关闭)
+- 剩余参数 `兼容` 固定参数与可选参数
+
+#### 参数类型
+```ts
+let handler3 = (a: string) => {}
+hof(handler3) // error
+```
+
+如果函数参数类型是对象类型的呢？
 
 ```ts
 interface Point2D {
@@ -160,11 +175,11 @@ let p2d = (point: Point2D) => {}
 let p3d = (point: Point3D) => {}
 
 p3d = p2d 
-p2d = p3d // error (通过 `structFunctionTypes: false` 可以关闭)
+p2d = p3d // error (通过 `strictFunctionTypes: false` 可以关闭)
 ```
 参数多的兼容参数少的
 
-返回值类型
+#### 返回值类型
 
 ```ts
 let f1 = () => ({x: 1})
@@ -172,40 +187,126 @@ let f2 = () => ({x: 1, y: 2})
 f1 = f2
 f2 = f1 // error
 ```
-
-相同或者是子类型
-
+与鸭式辩型法一样，成员少的兼容成员多的
 
 函数重载
+```ts
+function overload(a: number, b: number): number // 目标函数【参数多于源函数，类型小于源函数】
+function overload(a: string, b: string): string // 目标函数
+function overload(a: any, b: any): any {} // 具体实现：源函数
+```
 
 
-1.接口
-成员少的可以兼容成员多的
-2.函数
-1）个数 
-    多的可以兼容少的 
-            固有参数         剩余参数             可选参数
-可选参数    不兼容              不兼容
-剩余参数      兼容                                兼容
-固有参数                       兼容                  兼容
-2）参数类型 
-多的可以兼容少的
-3）函数返回值 
-少的可以兼容多的
-4）函数重载
-目标函数参数个数多于或者等于源函数参数个数
-3.枚举
+### 枚举的兼容性
+
 数字和枚举可以相互兼容，枚举与枚举间不兼容
-4.类
-类的构造函数和静态成员不参与比较，当类中有私有成员时，两个类不兼容，类与子类可以
-5.泛型
+
+```ts
+enum Fruit { Apple, Banana }
+enum Color { Red, Yellow }
+
+let fruit: Fruit.Apple = 11
+let num: number = Fruit.Apple
+
+let color = enum: Color.Red = Fruit.Apple // 报错
+```
+
+### 类的兼容性
+
+类的构造函数和静态成员不参与比较
+
+```ts
+class A {
+  constructor(p: number, q: number){}
+  id: number = 1
+}
+class B {
+  static s = 1
+  constructor(p: number) {}
+  id: number = 2
+}
+
+let aa = new A(1,2)
+let bb = new B(1)
+
+aa = bb // 实例相互兼容
+bb = aa // 实例相互兼容
+```
+
+当类中有私有成员时，两个类不兼容，类与子类可以
+```ts
+class A {
+  constructor(p: number, q: number){}
+  id: number = 1
+  private name: string = ''
+}
+class B {
+  static s = 1
+  constructor(p: number) {}
+  id: number = 2
+  private name: string = ''
+}
+
+let aa = new A(1,2)
+let bb = new B(1)
+
+aa = bb // error
+bb = aa // error
+
+class C extends A {}
+let cc = new C(1,2)
+aa = cc // 父类和子类的实例相互兼容
+cc = aa // 父类和子类的实例相互兼容
+```
+
+
+### 泛型的兼容性
+
+
 1）泛型接口 
 在两个泛型参数只有类型不相同时，只有在泛型参数使用时才影响
+
+```ts
+interface Empty<T> {}
+
+let obj1: Empty<number> = {}
+let obj2: Empty<string> = {}
+
+obj1 = obj2 
+obj2 = obj1
+```
+接口使用了类型参数，就会影响兼容性
+```ts
+interface Empty<T> {
+  value: T
+}
+
+let obj1: Empty<number> = {}
+let obj2: Empty<string> = {}
+
+obj1 = obj2 // error
+obj2 = obj1 // error
+```
+
 2）泛型函数
 
+```ts
+let log1 = function<T>(x: T): T {
+  console.log('x')
+  return x
+}
+
+let log2 = function<U>(y: U): U {
+  console.log('y')
+  return y
+}
+
+log1 = log2
+log2 = log1
+```
+
+### 总结
+结构之间进行比较：成员少的兼容成员多的（我要的你都有，那我兼容你）
+函数之间进行比较：参数多的兼容参数少的（你给我太多我处理不了，我不能兼容你）
 
 ## 类型保护
-
-
-
-
