--- a/docs/fe_advance/typescript/basics/09类型检查机制.md
+++ b/docs/fe_advance/typescript/basics/09类型检查机制.md
@@ -310,3 +310,89 @@ log2 = log1
 函数之间进行比较：参数多的兼容参数少的（你给我太多我处理不了，我不能兼容你）
 
 ## 类型保护
+
+> TS能够在特定的区块中保证变量属于某种确定的类型，可以在区块中放心的引用此类型的属性，或者调用此类型的方法
+
+```ts
+class Java {
+  helloJava() {
+    console.log('hello Java')
+  }
+  java: any
+}
+
+class JavaScript {
+  helloJavaScript() {
+    console.log('hello JavaScript')
+  }
+  javascript: any
+}
+
+function getLanguage(type: Type){
+  let lang = type === Type.Strong ? new Java() : new JavaScript() 
+  // TODO
+  return lang
+}
+
+getLanguage(Type.Strong)
+```
+
+### instanceof
+
+判断一个实例是否属于某个类
+```ts
+function getLanguage(type: Type){
+  let lang = type === Type.Strong ? new Java() : new JavaScript() 
+  // TODO
+  if(lang instancof Java){
+    lang.helloJava()
+  }else {
+    lang.helloJavaScript()
+  }
+  return lang
+}
+```
+### in
+
+判断对象中是否包含某个属性
+```ts
+function getLanguage(type: Type){
+  let lang = type === Type.Strong ? new Java() : new JavaScript() 
+  // TODO
+  if('java' in lang){
+    lang.helloJava()
+  }else {
+    lang.helloJavaScript()
+  }
+  return lang
+}
+```
+
+### typeof
+
+```ts
+function test( x: string | number){
+  if(typeof x === 'string'){
+    x.length
+  }else{
+    x.toFixed(2)
+  }
+}
+```
+
+### 创建类型保护函数
+
+类型谓词 lang is Java
+
+```ts
+function isJava(lang: Java | JavaScript): lang is Java {
+  return (lang as Java).helloJava !== undefined
+}
+
+// 创建类型保护区块
+if(isJava(lang)){
+  lang.helloJava()
+}else{
+  lang.helloJavaScript()
+}
+```
