--- a/docs/fe_engineering/standardization/Git/02配置公钥.md
+++ b/docs/fe_engineering/standardization/Git/02配置公钥.md
@@ -1,15 +1,24 @@
-# 5. 配置Gitee SSH公钥
+# 配置Gitee SSH公钥
 
 ```powershell
 ssh-keygen -t rsa -C "yk1123@vip.163.com"
 ```
+
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20210227201025579.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80NDk3MjAwOA==,size_16,color_FFFFFF,t_70)
-得到SSH公钥
+
+## 获取SSH公钥
+
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/2021022720115189.png)
+
 复制粘贴进去
+
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20210227200852264.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80NDk3MjAwOA==,size_16,color_FFFFFF,t_70)
+
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/2021022720141449.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80NDk3MjAwOA==,size_16,color_FFFFFF,t_70)
-添加公钥
+
+
+## 添加公钥
+
 ```powershell
 ssh -T git@gitee.com
 ```
@@ -20,8 +29,10 @@ Are you sure you want to continue connecting (yes/no)? yes
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20210227201652492.png)
 成功！
 
-# 6. Gitee 创建仓库 本地同步
+## Gitee 创建仓库 本地同步
+
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20210227202126881.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80NDk3MjAwOA==,size_16,color_FFFFFF,t_70)
+
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20210227202159667.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80NDk3MjAwOA==,size_16,color_FFFFFF,t_70)
 
 ```powershell
@@ -38,31 +49,46 @@ git config --global user.email "yk1123@vip.163.com"
 ```powershell
 git status
 ```
+
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20210227202556561.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80NDk3MjAwOA==,size_16,color_FFFFFF,t_70)
+
 添加至缓存区
+
 ```powershell
 git add .
 ```
+
 添加至本地库
+
 ```powershell
 git commit -m "add files"
 ```
+
 最后确认状态
+
 ```powershell
 git status
 ```
+
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20210227202753618.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80NDk3MjAwOA==,size_16,color_FFFFFF,t_70)
+
 
 ```powershell
 git remote add origin https://gitee.com/ykang2020/vue_shop.git
 ```
+
 本地库上传至gitee
+
 ```powershell
 git push -u origin master
 ```
 
 登录gitee账户
+
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20210227203003457.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80NDk3MjAwOA==,size_16,color_FFFFFF,t_70)
+
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20210227203040690.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80NDk3MjAwOA==,size_16,color_FFFFFF,t_70)
+
 完成
+
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/2021022720321154.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80NDk3MjAwOA==,size_16,color_FFFFFF,t_70)
