--- a/docs/fe_engineering/standardization/Git/01基本使用.md
+++ b/docs/fe_engineering/standardization/Git/01基本使用.md
@@ -1,14 +1,11 @@
-# Git基本使用
-## 1. Git 简介
-### 1.1 Git 简史
+# Git 基本使用
 
-![在这里插入图片描述](https://img-blog.csdnimg.cn/20210207175749322.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80NDk3MjAwOA==,size_16,color_FFFFFF,t_70)
-
-### 1.2Git 官网
+## Git 简介
+### Git 官网
 
 [官网地址：https://git-scm.com/](https://git-scm.com/)
 
-### 1.3Git 的优势
+### Git 的优势
 
 - 大部分操作在本地完成，不需要联网
 - 完整性保证
@@ -16,15 +13,15 @@
 -  分支操作非常快捷流畅
 -  与Linux 命令全面兼容
 
-### 1.4Git 安装
+### Git 安装
 
 [傻瓜式安装：https://git-scm.com/downloads](https://git-scm.com/downloads)
 
-### 5.5Git 结构
+### Git 结构
 
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20210207175357669.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80NDk3MjAwOA==,size_16,color_FFFFFF,t_70)
 
-### 1.6 Git 和代码托管中心
+### Git 和代码托管中心
 
 > 代码托管中心的任务：维护远程库
 
@@ -36,7 +33,7 @@
 2. 码云Gitee
 
 
-### 1.7 本地库和远程库
+### 本地库和远程库
 
 #### 团队内部协作 
 
