--- a/docs/code_life/life/diary/022022年5月.md
+++ b/docs/code_life/life/diary/022022年5月.md
@@ -17,4 +17,35 @@ npm i zx -g
 ```js
 #!/usr/bin/env zx
 // js逻辑
+
+// 获取yk2012的GitHub代码仓库
+const data = await fetch("https://api.github.com/users/yk2012/repos");
+
+const urls = await data.json();
+
+console.log(urls);
+
+// 获取自己的代码仓库
+const repos = urls
+  .filter((info) => {return !info.fork})
+  .map((info) => info.git_url)
+
+console.log(repos)
+
+// 将自己创建的项目clone下来
+
+await $`mkdir yk_repos`
+cd('./yk_repos')
+
+Promise.all(
+  repos.map((url)=>{
+    return $`git clone ${url}`
+  })
+)
+```
+
+
+执行
+```powershell
+zx ./test.mjs
 ```
