--- a/docs/fe_engineering/standardization/Git/01基本使用.md
+++ b/docs/fe_engineering/standardization/Git/01基本使用.md
@@ -19,7 +19,7 @@
 
 ### Git 结构
 
-![在这里插入图片描述](https://img-blog.csdnimg.cn/20210207175357669.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80NDk3MjAwOA==,size_16,color_FFFFFF,t_70)
+![image.png](https://p6-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/1a70d4fdeb334960b62b7e7bb2a8de39~tplv-k3u1fbpfcp-watermark.image?)
 
 ### Git 和代码托管中心
 
@@ -104,6 +104,32 @@ git config --global user.email yk@yk.com
 - 就近原则：项目级别优先于系统用户级别，二者都有时采用项目级别的签名
 - 如果只有系统用户级别的签名，就以系统用户级别的签名为准
 -  二者都没有不允许
+
+
+### 添加配置
+```
+git config [--local | --global | --system] user.name 'Your name'
+git config [--local | --global | --system] user.email 'Your email'
+```
+### 查看配置
+```
+git config --list [--local | --global | --system]
+```
+- 区别
+
+local：区域为本仓库
+global: 当前用户的所有仓库
+system: 本系统的所有用户
+
+
+### 清除设置
+
+```
+$ git config --unset --local user.name
+$ git config --unset --global user.name
+$ git config --unset --system user.name
+```
+
 
 ### 2.3基本操作(重点)
 
