--- a/docs/fe_advance/typescript/basics/06面向对象.md
+++ b/docs/fe_advance/typescript/basics/06面向对象.md
@@ -1,2 +1,489 @@
 # TS面向对象
 
+**面向对象**是一种优秀的程序设计方法，它的基本思想是使用类、对象、继承、封装、消息等基本概念进行程序设计。
+
+> 传统的面向对象编程（OOP `Object-Oriented Programming`）语言（例如Java）基本都是基于类的，而JavaScript是通过原型与构造函数来模拟实现类。好在 ES6 出现一些新语法糖，使得 JavaScript 拥有了 `class` 关键字。虽然本质依然是构造函数，但是这使得开发者可以更加方便的定义类和使用继承。但是 ES6 的 `class` 语法依然有一些比如**修饰符**和**抽象类**的特性还没有加入。
+
+在了解面向对象之前，我们首先要了解什么是对象，有这么一种说法：你所接触的**一切都是对象**，其实准确点来说，`对象` 就是**一个自包含的实体，用一组可识别的特性（属性）和行为（方法）来标识**。程序中的对象就是对现实世界中具体实体的抽象。而 `类` 就是**具有相同属性和功能的对象的抽象的集合**。
+
+所以，我们一般是先**创建** `类`，然后通过**实例化** `类` 来得到 `对象`。
+
+【Tips】在JavaScript中类与函数的两点区别：
+1. 函数受**函数**作用域限制，而类受**块**作用域限制
+2. 函数声明可以提升，而类定义不能
+
+
+## 类
+
+比如我们面向 **猫** 这个对象，我们需要将对象的公共部分抽取出来，形成一个类。
+
+> 类可以包含构造函数方法、实例方法、获取函数、设置函数和静态类方法
+
+创建一个猫的类，提供一些属性（特性）和方法（行为）
+
+```ts
+class Cat{
+  // 属性的类型声明，在TS中必须有初始值，或者在构造函数中初始化
+  name: string
+  age: number
+  
+  // 构造函数方法
+  constructor(name: string) {
+    // 初始化属性
+    this.name = name
+    this.age = 3
+  }
+  
+  // 方法
+  sayHi(): void{
+    console.log(`喵，我是 ${this.name}`)
+  }
+}
+```
+
+实例化出一个对象
+
+```js
+let Tom = new Cat("Tom") // 创建Cat类的实例
+console.log(Tom) // Cat: { "name": "Tom", "age": 3 } （实例上只有属性）
+Tom.say() // "喵，我是Tom" （方法在原型上，所以调用可以通过原型链访问到）
+```
+
+
+# 面向对象三大基本特征
+
+面向对象方法具有三个基本特征：**封装**（`Encapsulation`）、**继承**（`Inheritance`）和 **多态**（`Polymorphism`）
+
+
+## 继承
+
+> **继承**，在继承机制下形成有层级的类，**使得低层级的类可以延用高层级类的特征和方法**。继承的实现方式有两种：实现继承、接口继承。
+
+- **实现继承**：直接使用基类公开的属性和方法，无需额外编码。
+- **接口继承**：仅使用接口公开的属性和方法名称，需要子类实现。
+
+
+也就是说，继承有以下目的：
+
+-   复用代码，减少类的冗余代码，减少开发工作量。
+-   使得类与类之间产生关系，为多态的实现打下基础。
+
+
+首先创建一个猫类的父类 `Animal`
+
+```ts
+class Animal{
+  name: string
+  age: number
+  construcor(name: string){
+    this.name = name
+    this.age = 3
+  }
+  say(){
+    console.log('...')
+  }
+}
+```
+
+- 使用 `extends` 关键字来继承 `Animal` 类
+- 在子类中可以使用 `super` 来完成对父类的引用
+
+```ts
+class Cat extends Animal {
+  color: string
+  construcor(name: string, color: string){
+    super(name)
+    this.color = color
+  } 
+}
+```
+
+
+
+-   通过继承可以将其他类中的属性和方法引入到当前类中 （在不修改类的情况下完成对类的扩展）
+
+
+```ts
+class Animal{
+    name: string;
+    age: number;
+    constructor(name: string, age: number){
+        this.name = name;
+        this.age = age;
+    }
+}
+
+// 继承自动物类
+class Dog extends Animal{
+    // 增加新方法
+    bark(){
+        console.log(`${this.name}在汪汪叫！`);
+    }
+}
+
+const dog = new Dog('旺财', 4);
+dog.bark();
+```
+
+
+### 方法的重写
+
+-   发生继承时，如果子类中的方法会替换掉父类中的同名方法，这就称为方法的**重写**
+
+```ts
+class Animal{
+    name: string;
+    age: number;
+    constructor(name: string, age: number){
+        this.name = name;
+        this.age = age;
+    }
+    run(){
+        console.log(`父类中的run方法！`);
+    }
+}
+
+class Dog extends Animal{
+    bark(){
+        console.log(`${this.name}在汪汪叫！`);
+    }
+    // 重写父类的run方法
+    run(){
+        console.log(`子类中的run方法，会重写父类中的run方法！`);
+    }
+}
+
+const dog = new Dog('旺财', 4);
+dog.bark();
+```
+
+
+
+### 抽象类（`abstract class`）
+
+- 抽象类是专门用来被其他类所继承的类，它只能被其他类所继承不能用来创建实例
+
+
+```ts
+abstract class Animal {
+  eat() {
+    console.log('eat')
+  }
+  abstract sleep(): void
+}
+```
+
+- 不能直接实例化抽象类，通常需要我们创建子类继承基类,然后可以实例化子类
+
+```ts
+class Dog extends Animal {
+  constructor(name: string){
+    super()
+    this.name = name
+  }
+  name: string
+  run(){}
+  sleep(){
+    console.log('dog sleep')
+  }
+}
+```
+
+- 使用`abstract`开头的方法叫做抽象方法，抽象方法没有方法体只能定义在抽象类中，继承抽象类时抽象方法**必须**要实现
+
+```ts
+abstract class Animal{
+    abstract run(): void; // 抽象方法
+    bark() {
+        console.log('动物在叫~');
+    }
+}
+
+class Dog extends Animals{
+    run() {
+        console.log('狗在跑~');
+    }
+}
+```
+
+
+## 封装
+
+> 将客观事物抽象为逻辑实体，**实体的属性和功能相结合**，形成一个有机的整体。并**对实体的属性和功能实现进行访问控制**，向信任的实体开放，对不信任的实体隐藏。，**通过开放的外部接口即可访问**，无需知道功能如何实现。
+
+通俗点来说，封装主要有以下目的：
+
+-   可隐藏实体实现的细节
+-   提高安全性，设定访问控制，只允许具有特定权限的使用者调用
+-   简化编程，调用方无需知道功能是怎么实现的，即可调用
+
+每个对象都包含它能进行操作所需要的所有信息，这个特性称为封装，因此对象不必依赖其他对象来完成自己的操作。这样方法和属性包装在类中，通过类的实例来实现。
+
+
+-   对象实质上就是属性和方法的容器，它的主要作用就是存储属性和方法，这就是所谓的封装
+-   默认情况下，对象的属性是可以任意的修改的，为了确保数据的安全性，在TS中可以对属性的权限进行设置
+
+
+类的成员
+
+- 默认：`public`
+- 私有成员：类本身 `private`
+- 受保护成员：类、子类 `protected`
+- 静态：`static`
+- 只读属性：`readonly`
+
+### 访问修饰符（TS）
+
+-   TS中属性具有三种访问修饰符：
+
+    - ① `public`（默认值），可以在类、子类和对象中修改
+    - ② `protected` ，可以在类、子类中修改
+    - ③ `private` ，只可以在类中修改
+
+-   `public`
+
+（默认值），可以在类、子类和对象中修改
+```ts
+class Person{
+    public name: string; // 写或什么都不写都是public
+    public age: number;
+
+    constructor(name: string, age: number){
+        this.name = name; // 可以在类中修改
+        this.age = age;
+    }
+
+    sayHello(){
+        console.log(`大家好，我是${this.name}`);
+    }
+}
+
+class Employee extends Person{
+    constructor(name: string, age: number){
+        super(name, age);
+        this.name = name; // 子类中可以修改
+    }
+}
+
+const p = new Person('孙悟空', 18);
+p.name = '猪八戒';// 可以通过对象修改
+```
+
+-   `protected`
+可以在类、子类中修改
+```ts
+class Person{
+    protected name: string;
+    protected age: number;
+
+    constructor(name: string, age: number){
+        this.name = name; // 可以修改
+        this.age = age;
+    }
+
+    sayHello(){
+        console.log(`大家好，我是${this.name}`);
+    }
+}
+
+class Employee extends Person{
+
+    constructor(name: string, age: number){
+        super(name, age);
+        this.name = name; //子类中可以修改
+    }
+}
+
+const p = new Person('孙悟空', 18);
+p.name = '猪八戒';// 不能修改
+```
+
+-   `private`
+只可以在类中修改
+```ts
+class Person{
+    private name: string;
+    private age: number;
+
+    constructor(name: string, age: number){
+        this.name = name; // 可以修改
+        this.age = age;
+    }
+
+    sayHello(){
+        console.log(`大家好，我是${this.name}`);
+    }
+}
+
+class Employee extends Person{
+
+    constructor(name: string, age: number){
+        super(name, age);
+        this.name = name; //子类中不能修改
+    }
+}
+
+const p = new Person('孙悟空', 18);
+p.name = '猪八戒';// 不能修改
+```
+
+如果给构造函数添加访问修饰符`protected`：不能被实例化，只能被继承
+
+
+
+构造函数的参数也可以添加访问修饰符`public`：将参数自动变成实例属性，就可以省略在类中的定义
+
+
+
+
+### 只读属性
+
+如果在声明属性时添加一个`readonly`，则属性便成了只读属性无法修改
+
+如果有访问修饰符，写在其后面即可
+
+### 静态方法/属性
+
+-   静态属性（方法），也称为类属性。使用静态属性无需创建实例，通过类即可直接使用
+
+-   静态属性（方法）使用 `static` 开头
+
+
+```ts
+class Tools{
+    static PI = 3.1415926;
+
+    static sum(num1: number, num2: number){
+        return num1 + num2
+    }
+}
+
+console.log(Tools.PI);
+console.log(Tools.sum(123, 456));
+```
+
+
+### 属性存取器
+
+-   对于一些不希望被任意修改的属性，可以将其设置为`private`
+-   直接将其设置为`private`将导致无法再通过对象修改其中的属性
+-   我们可以在类中定义一组读取、设置属性的方法，这种对属性读取或设置的属性被称为属性的存取器
+-   读取属性的方法叫做`setter`方法，设置属性的方法叫做`getter`方法
+
+
+```ts
+class Person{
+    private _name: string;
+
+    constructor(name: string){
+        this._name = name;
+    }
+
+    get name(){
+        return this._name;
+    }
+
+    set name(name: string){
+        this._name = name;
+    }
+
+}
+
+const p1 = new Person('孙悟空');
+console.log(p1.name); // 通过getter读取name属性
+p1.name = '猪八戒';   // 通过setter修改name属性
+```
+
+
+
+
+## 多态
+
+> **多态**，是指一个类的**同名方法，在不同情况下的实现细节不同**。多态机制实现**不同的内部实现结构共用同一个外部接口**
+
+
+也就是说，多态有以下目的：
+
+-   一个外部接口可被多个同类使用。
+-   不同对象调用同个方法，可有不同实现。
+
+
+在父类中定义一个方法，在多个子类中进行不同的实现。在程序运行时，会根据不同的对象执行不同的操作，实现了运行时的绑定。
+
+
+```ts
+abstract class Animal {
+  abstract sleep(): void // 抽象方法，让子类实现
+}
+```
+
+```ts
+class Dog extends Animal {
+  sleep() {
+    console.log('dog sleep')
+  }
+}
+class Cat extends Animal {
+  sleep() {
+    console.log('cat sleep')
+  }
+}
+
+let dog = new Dog()
+let cat = new Cat()
+```
+
+多态的实际含义是：同一操作作用于不同的对象上面，可以产生不同的解释和不同的执行结果。
+
+```ts
+// 定义一个动物数组
+let animals: Animal[] = [dog, cat] 
+
+animals.forEach(animal => {
+  animal.sleep() // 同一操作作用于不同的对象上面，可以产生不同的解释和不同的执行结果
+})
+```
+
+
+> 静态类型的面向对象语言通常被设计为可以向上转型：当给一个类变量赋值时，这个变量的类型既可以使用这个类本身，也可以使用这个类的超类。
+
+
+### this类型
+
+类的成员方法可以直接返回 `this`，这样可以方便的实现链式调用
+
+```ts
+class WorkFlow {
+  step1() {
+    return this
+  }
+  step2() {
+    return this
+  }
+}
+
+new WorkFlow().step1().step2()
+
+// 可以实现多态
+class MyFlow extends WorkFlow {
+  next() {
+    return this
+  }
+}
+
+new MyFlow().next().step1().next().step2()
+```
+
+
+
+
+## 参考文献
+
+- [《深入理解TypeScript》](https://book.douban.com/subject/34908276/)
+-  [《JavaScript高级程序设计（第四版）》](https://book.douban.com/subject/35175321/)
+- [《大话设计模式》](https://book.douban.com/subject/2334288/)
+- 《疯狂Java讲义（第五版）》
+- [TypeScript: JavaScript With Syntax For Types. (typescriptlang.org)](https://www.typescriptlang.org/)
+- [深入浅出TypeScript：从基础知识到类型编程 - 寻找海蓝96 - 掘金小册 (juejin.cn)](https://juejin.cn/book/6844733813021491207)
+- [面向对象的三大基本特征和五大基本原则 - SegmentFault 思否](https://segmentfault.com/a/1190000021898422)
+- [TypeScript 开发实战 (geekbang.org)](https://time.geekbang.org/course/intro/211)
