--- a/docs/fe_engineering/modularization/webpack/01快速上手.md
+++ b/docs/fe_engineering/modularization/webpack/01快速上手.md
@@ -13,14 +13,14 @@
 # 2. webpack 五个核心概念
 
 ## 2.1 Entry 入口
->v 指示 webpack 以哪个文件为入口起点开始打包，分析构建内部依赖图。
+
+> 指示 webpack 以哪个文件为入口起点开始打包，分析构建内部依赖图。
 
 ## 2.2 Output 输出
 > 指示 webpack 打包后的资源 bundles 输出到哪里去，以及如何命名。
 
 ## 2.3 Loader
-> 让 webpack 能够去处理那些非 JS 的文件，比如样式文件、图片文件(webpack 自身只理解
-JS)
+> 让 webpack 能够去处理那些非 JS 的文件，比如样式文件、图片文件(webpack 自身只理解JS)
 
 ## 2.4 Plugins 插件
 > 可以用于执行范围更广的任务。插件的范围包括，从打包优化和压缩，一直到重新定义环境中的变量等
